fix(#422): Fix tests in CI